fixed timer to not go crazy with spam clicks / fixed blurring

--- a/static/stylesheets/game.css
+++ b/static/stylesheets/game.css
@@ -67,12 +67,12 @@ div#game:focus {
 }
 
 #words {
-    filter: blur(5px);
+    /* filter: blur(5px); */
     color: var(--white);
 }
 
 #game:focus #words {
-    filter: blur(0);
+    /* filter: blur(0); */
 }
 
 #focus-error {
@@ -103,7 +103,7 @@ div.word {
 
 #game.over #words {
     opacity: .5;
-    filter: blur(0px);
+    /* filter: blur(0px); */
 }
 
 #game.over:focus #cursor {
